--- a/app/src/main/assets/terms.html
+++ b/app/src/main/assets/terms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p><b>TERMS / AGREEMENTS / PRIVACY</b></p>
+<p><b>TERMS & CONDITIONS</b></p>
 <p>Thank you for choosing The Square Construction Tech Limited (“The Square”, “we”, “us”, “our”). By registering or otherwise using The Square services, Website, App and/or software applications (together, “The Square Service” or “Service”), or accessing any content or material that is made available by The Square through the Service (the “Content”) you are entering into a binding contract with The Square.
 </p>
 <p>Use of The Square relies on several technical requirements.
@@ -124,14 +124,14 @@
 <p>10.8. To the fullest extent permitted by local law, in no event will The Square, its officers, shareholders, employees, agents, directors, subsidiaries, affiliates, successors, assigns, suppliers, or licensors be liable for 1) Any indirect, special, incidental, punitive, exemplary, or consequential damages; 2) any loss of use, data, business, or profits (whether direct or indirect), in all cases arising out of the use or inability to use The Square service, third party applications, or third party application content, regardless or legal theory, without regard to whether The Square has been warned of the possibility of those damages, and even if a remedy fails of its essential purpose; or 3) aggregate liability for all claims relating to The Square Service, third party applications, or third party content more than the amounts paid by you to The Square during the prior twelve (12) months in question, to the extent permissible by applicable local law.</p>
 <p>10.9. Nothing in these Terms of Use shall exclude or limit our liability for fraudulent misrepresentation or for death or personal injury resulting from our negligence or that of our employees or our agents.</p>
 
-<p>11. Indemnity</p>
+<p><b>11. Indemnity</b></p>
 <p>11.1.  You agree to be fully responsible for (and fully indemnify us against) all claims, liability, damages, losses, costs and expenses, including legal fees, suffered by us and arising out of any breach of these Terms of Use by you or any other liabilities arising out of your use of the Website or the App, or the use by any other person accessing the Website or the App using your account.</p>
 <p>11.2. To the fullest extent permitted by applicable law, you agree to indemnify and hold The Square harmless from and against all damages, losses, and expenses of any kind (including reasonable legal fees and costs) arising out of: 1) your breach of this Agreement; 2) any User Content; 3) any activity in which you engage on or through The Square service; and 4) your violation of any law or the rights of a third party.</p>
 <p><b>12. Severance and Waiver</b></p>
 <p>12.1. If any part of these Terms of Use is deemed unlawful, void or for any reason unenforceable, then that part shall be deemed to be severable from these Terms of Use and shall not affect the validity and enforceability of any of the remaining parts of these Terms of Use.</p>
 <p>12.2. No waiver by us shall be construed as a waiver of any proceeding or succeeding breach of any part of these Terms of Use.</p>
 
-<p>13. Conflict of Terms</p>
+<p><b>13. Conflict of Terms</b></p>
 <p>13.1. Other than stated in this section or as explicitly agreed upon in writing between you and The Square, the Agreements constitute all the terms and conditions agreed upon between you and The Square and supersede any prior agreements in relation to the subject matter of these Agreements, whether written or oral.</p>
 <p>13.2. In the event of any conflict between the interpretation of these Terms of Use and the interpretation of the Worker Terms and/or the Employer Terms, these Terms of Use shall prevail.</p>
 
@@ -202,7 +202,7 @@
 <p>i) you will negotiate the terms of your engagement or employment with that employer, we will not be involved in the process;</p>
 <p>ii) you must advise us that you have accepted a position that you found via the App or Website; and</p>
 <p>iii) you may be offered additional services to assist you with that arrangement and where additional services are made available, the specific terms relating to those services will also apply;</p>
-<p><b>22.4. Ratings & Reviews</b></p>
+<p>22.4. Ratings & Reviews</p>
 <p>22.4.1. The Square collects Ratings & Reviews of Workers. We collect Ratings & Reviews based on a score for professional qualities of Workers. We also may collect a free comment about the professional performance. The Square performs quality control over the information gathered, especially in the free text fields, to ensure that the principle of data quality is observed and that they are not excessive or disproportionate considering the intended purpose.</p>
 <p>22.5. Source of data</p>
 <p>22.5.1. Ratings & Reviews compiled by The Square are facilitated by former employers of Workers. Contact details of these employers are provided by the worker themselves. The worker guarantees that all information provided to The Square regarding former employers and their opinions has their consent for distribution in our platform.</p>
@@ -240,17 +240,14 @@ any agreed discounts shall cease to apply;</p>
 <p>23.4. Available Services</p>
 <p>23.4.1. As a Business you will be able to access to the following Services. (These options are subject to payment):</p>
 <p>i) Advertising Options;</p>
-<p></p>ii) Post a Job;</p>
-<p></p>iii) Access to Workers Profiles;</p>
+<p>ii) Post a Job;</p>
+<p>iii) Access to Workers Profiles;</p>
 <p>iiii) Worker matching, offering, interviewing/booking and cancelling</p>
 <p>23.4.2. As a Business we may also offer to you additional Services that are not immediately available to you on registration and for which you will need to apply and be granted access in order to use them. The availability of any additional Services will be at our discretion and may require additional approvals or verifications or conditions to be complied with before you are permitted to use them.</p>
 <p>23.4.3. Where additional Services are made available, the specific terms relating to those Services will also apply.</p>
 <p>23.4.4. We may suspend or cancel your registration immediately if you breach any of your obligations under these Terms of Use or under any other terms and conditions which apply to any Services provided to you, or otherwise at our reasonable discretion.</p>
 <p>23.2. Payment Options</p>
-<p>23.2.1. The Square, Job Promotions, matching and hiring services require payment before you can access them. Specific Terms of Business apply to the payment and subscription options which can be found on our website and or App.</p>
-<p>23.2. Apprenticeship Promotions</p>
-<p>23.2.1 Because we are passionate about supporting young people, all “Apprenticeship Promotions” (a job promotion specifically for an apprentice role) are free of charge to post on the The Square. However, should we believe you are abusing this offer, we reserve the right to remove the Apprenticeship Promotion and / or terminate an account or subscription.</p>
-<p>23.2.2. If you are a paying subscriber, any Apprenticeship Promotions will not contribute towards your monthly Job Promotion and matched worker allowance.</p>
+<p>23.2.1. The Square services require payment before you can access them. Service details can be found on our website and / or App.</p>
 <p>23.3.Trials</p>
 <p>23.3.1. From time to time, we or others on our behalf may offer trials of paid subscriptions for a specified period without payment or at a reduced rate (a “Trial”). The Square reserves the right, in its absolute discretion, to determine your eligibility for a Trial, and, subject to applicable laws, to withdraw or to modify a Trial at any time without prior notice and with no liability, to the greatest extent permitted under the law.</p>
 <p>23.3.2. For some Trials, we will require you to provide your payment details to start the Trial. At the end of such Trials, we may automatically start to charge your for the applicable paid subscription on the first day following the end of the trial, on a recurring monthly basis. By providing your payment details in conjunction with the trial, you agree to this charge using payment details. If you do not want this charge, you must cancel the applicable paid subscription through your account on The Square before the end of your trial. If you do not want to continue to be charged on a recurring monthly basis, you must cancel the applicable paid subscription through your account on The Square. Paid subscriptions cannot be terminated before the end of the period for which you have already paid, and except as expressly provided in these terms, The Square will not refund any fees that you have already paid.</p>
