--- a/app/src/main/assets/terms.html
+++ b/app/src/main/assets/terms.html
@@ -285,6 +285,7 @@ any agreed discounts shall cease to apply;</p>
 <p>23.7.4. You accept to deal fairly and professionally with Workers and not to do anything which may bring us or any of our group companies into disrepute. In case there is any complaint by a candidate against us as a result of breach of this obligation or any other clause that is part of these the Terms of Use, we reserve the right to claim damages from you.</p>
 <p>23.7.5. While we may conduct some checks, we do not guarantee any response to the job promotions posted on the App or Website or that the answers given by the Workers are from people qualified for the position advertised. You are responsible for carrying out all the controls and procedures necessary to ensure that Workers are suitable for the job advertised and that Workers have the required qualifications and personal characteristics that fit the description provided.</p>
 <p>23.7.6. We may withdraw any job promotion that contains links to a web page that, in our opinion, is unlawful, defamatory, offensive, fraudulent, violent, discriminatory, obscene or sexually explicit or that may affect our reputation. You will indemnify us from and against any claim or liability caused by the content of job promotions or any links published as part of any job promotions.</p>
-
+<p><b>Disclaimer</b></p>
+<p>The Square has taken all reasonable care to ensure that the information provided is accurate however, you acknowledge and agree that The Square accepts no liability whatsoever in contract, tort or otherwise for any loss or damage caused by or arising directly or indirectly in connection with any use or reliance on the information provided, except to the extent that such liability cannot be excluded by law.</p>
 </body>
 </html>
