--- a/app/src/main/assets/terms.html
+++ b/app/src/main/assets/terms.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Josefin+Sans' rel='stylesheet' type='text/css'>
+    <style>
+p,ul {font-family:Josefin Sans;line-height:1.4;font-size:17px;}
+b {font-family:Josefin Sans;line-height:1.4;color:red;}
+</style>
+</head>
 <body>
 <p><b>TERMS & CONDITIONS</b></p>
 <p>Thank you for choosing The Square Construction Tech Limited (“The Square”, “we”, “us”, “our”). By registering or otherwise using The Square services, Website, App and/or software applications (together, “The Square Service” or “Service”), or accessing any content or material that is made available by The Square through the Service (the “Content”) you are entering into a binding contract with The Square.
