--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -3,21 +3,22 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Josefin+Sans' rel='stylesheet' type='text/css'>
     <style>
-p {font-family:Josefin Sans;line-height:1.4;}
+p,ul {font-family:Josefin Sans;line-height:1.4;font-size:17px;}
+b {font-family:Josefin Sans;line-height:1.4;color:red;}
 
 </style>
 </head>
 <body>
 <p><b><font color="red">ABOUT THE SQUARE CONSTRUCTION</font></b></p>
-<p style="font-size:19px;">The Square is a young innovative tech company. We solve problems to make things work better and make people’s lives easier specifically in regard to finding the best jobs and the best workers. Why? Because at the moment, it sucks for both employers and workers.
+<p>The Square is a young innovative tech company. We solve problems to make things work better and make people’s lives easier specifically in regard to finding the best jobs and the best workers. Why? Because at the moment, it sucks for both employers and workers.
 </p>
-<p  style="font-size:19px;">Technology hasn't played a huge role in construction or recruitment so far. We're changing that. We believe that technology can improve the hiring / job searching process and put efficiencies in place whilst making the process much more transparent. Not only that, it means both workers and employers can spend less time money and effort working with intermediaries and agencies. Think of us as Tinder for construction hiring.
+<p>Technology hasn't played a huge role in construction or recruitment so far. We're changing that. We believe that technology can improve the hiring / job searching process and put efficiencies in place whilst making the process much more transparent. Not only that, it means both workers and employers can spend less time money and effort working with intermediaries and agencies. Think of us as Tinder for construction hiring.
 </p>
 <p><b><font color="red">OUR TEAM:</font></b></p>
-<p style="font-size:19px;">We are a growing team of self motivated, fast thinking (and acting) doers. We have backgrounds from the world of tech, marketing and construction and from different parts of the world.
+<p >We are a growing team of self motivated, fast thinking (and acting) doers. We have backgrounds from the world of tech, marketing and construction and from different parts of the world.
 </p>
 <p><b><font color="red">OUR CULTURE (WE KNOW IT’S IMPORTANT):</font></b></p>
-<p style="font-size:19px;">We know culture is not what we say it is - it is the manifestation of our collective beliefs and actions. We don’t want to force a culture on anyone, in fact it’s the differences in people that creates an awesome culture. We celebrate that. That said, we like to believe our founding values and principles are shared. Be friendly, fun, fast and collaborative, be entrepreneurial, be trusted and never stop innovating.
+<p>We know culture is not what we say it is - it is the manifestation of our collective beliefs and actions. We don’t want to force a culture on anyone, in fact it’s the differences in people that creates an awesome culture. We celebrate that. That said, we like to believe our founding values and principles are shared. Be friendly, fun, fast and collaborative, be entrepreneurial, be trusted and never stop innovating.
 </p>
 </body>
 </html>
