--- a/app/src/main/assets/privacy.html
+++ b/app/src/main/assets/privacy.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Josefin+Sans' rel='stylesheet' type='text/css'>
+    <style>
+p,ul {font-family:Josefin Sans;line-height:1.4;font-size:17px;}
+b {font-family:Josefin Sans;line-height:1.4;color:red;}
+</style>
+</head>
 <body>
 <p><b>Privacy Policy</b></p>
 <p>The Square Construction Tech Limited ("We") are committed to protecting and respecting your privacy. This policy (together with our terms of use and any other documents referred to on it) sets out the basis on which any personal data we collect from or about you, or that you provide to us, will be processed by us. Please read the following carefully to understand our views and practices regarding your personal data and how we will treat it. For the purpose of the Data Protection Act 1998 (the Act), the data controller is The Square Construction Tech Limited.
